[package]
name = "HashChainStream"  # or change to "hash-chain-stream" if you prefer
version = "0.1.0"
edition = "2021"

[lib]
name = "hash_chain_stream"
path = "src/lib.rs"

[dependencies]
blake2 = "0.10"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
ahash = "0.8"
hashbrown = "0.14"
dashmap = "6"
parking_lot = "0.12"
crossbeam-epoch = "0.9"

[[bench]]
name = "hca_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
incremental = false