[package]
name = "HashChainStream"  # or change to "hash-chain-stream" if you prefer
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10"
blake3 = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rand = "0.8"
ahash = "0.8"
hashbrown = "0.14"

[[bench]]
name = "hca_benchmarks"
harness = false

[[bench]]
name = "radix_only"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
incremental = false
panic = "abort"
strip = "symbols"